fix: title background shift

--- a/src/components/timeline/timeline.module.scss
+++ b/src/components/timeline/timeline.module.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/variables.scss';
 .title {
+  width: 6em;
   font-size: 18px;
   font-weight: 600;
   @media (max-width: 768px) {
